--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,17 +1,50 @@
 ---
 resources:
-- name: attendee-service
+- name: attendee-service-source
   type: git
   source:
-    uri: https://github.com/pivotal-enablement/attendee-service
+    uri: https://github.com/sathyarajan/pcf-attendee-service-code  #<---- REPLACE ME
     branch: master
 
+- name: deploy-attendee-service
+  type: cf
+  source:
+    api: api.system.dev.digifabricpcf.com        #<---- REPLACE ME
+    username: {{cf-user}}
+    password: {{cf-password}}
+    organization: sneethirajan-pal    #<---- REPLACE ME
+    space: SpaceDeveloper         #<---- REPLACE ME
+    skip_cert_check: true
+
 jobs:
-- name: package
+- name: test
   public: true
   plan:
-  - get: attendee-service
-  - task: package
-    privileged: true
-    file: attendee-service/ci/tasks/package.yml
+  - get: attendee-service-source
+    trigger: true
+  - task: test
+    file: attendee-service-source/ci/tasks/test.yml
 
+- name: deploy
+  public: true
+  plan:
+  - get: attendee-service-source
+    trigger: true
+    passed: [test]
+  - task: package
+    file: attendee-service-source/ci/tasks/package.yml
+  - put: deploy-attendee-service
+    params:
+      manifest: attendee-service/manifest.yml
+      path: package-output/attendee-service.jar
+
+- name: smoke_test
+  public: true
+  plan:
+  - get: attendee-service-source
+    trigger: true
+    passed: [deploy]
+  - task: smoke_test
+    file: attendee-service-source/ci/tasks/smoke-test.yml
+    params:
+      ATTENDEE_SERVICE_URL: http://attendee-service-sighless-acetimetry.app.dev.digifabricpcf.com  #<---- REPLACE ME
