--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -4,7 +4,7 @@ resources:
   type: git
   source:
     uri: https://github.com/sathyarajan/pcf-attendee-service-code  #<---- REPLACE ME
-    branch: master
+    branch: bluegreen_branch
 
 - name: deploy-attendee-service
   type: cf
@@ -25,7 +25,7 @@ jobs:
   - task: test
     file: attendee-service-source/ci/tasks/test.yml
 
-- name: deploy
+- name: deploy_blue_green
   public: true
   plan:
   - get: attendee-service-source
@@ -35,16 +35,42 @@ jobs:
     file: attendee-service-source/ci/tasks/package.yml
   - put: deploy-attendee-service
     params:
-      manifest: attendee-service-source/manifest.yml
+      manifest: attendee-service-source/manifest-blue-green.yml
       path: package-output/attendee-service.jar
 
-- name: smoke_test
+- name: smoke_test_blue_green
   public: true
   plan:
   - get: attendee-service-source
     trigger: true
-    passed: [deploy]
+    passed: [deploy_blue_green]
   - task: smoke_test
     file: attendee-service-source/ci/tasks/smoke-test.yml
     params:
-      ATTENDEE_SERVICE_URL: http://attendee-service-sighless-acetimetry.app.dev.digifabricpcf.com  #<---- REPLACE ME
+      ATTENDEE_SERVICE_URL: http://attendee-service-green.app.dev.digifabricpcf.com
+
+- name: bind_green_canonical
+  public: true
+  plan:
+  - get: attendee-service-source
+    trigger: true
+    passed: [smoke_test_blue_green]   
+  - task: bing_green_canonical
+    file: attendee-service-source/ci/tasks/update-routes.yml
+    params:  
+      PWS_API: api.system.dev.digifabricpcf.com
+      PWS_ORG: sneethirajan-pal
+      PWS_USER: {{cf-user}}
+      PWS_PWD: {{cf-password}}
+      PWS_SPACE: SpaceDeveloper
+
+- name: smoke_test_green_canonical
+  public: true
+  plan:
+  - get: attendee-service-source
+    trigger: true
+    passed: [bind_green_canonical]
+  - task: smoke_test
+    file: attendee-service-source/ci/tasks/smoke-test.yml
+    params:
+      ATTENDEE_SERVICE_URL: http://attendee-service-public.app.dev.digifabricpcf.com
